--- a/src/components/MovieReviews/MovieReviews.module.css
+++ b/src/components/MovieReviews/MovieReviews.module.css
@@ -2,11 +2,11 @@
 border-top: 1px solid lightgray;
 margin: 10px;
 
-
 }
 
 .conteiner{  
 text-decoration: none;
 list-style: none;
 border-top: 1px solid lightgray;
+color: black;
 }
