--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -7,9 +7,10 @@
 
 .form{
     display: flex;
-    justify-content: center;    
+    justify-content: left;    
     padding: 10px;
-    gap: 10px;  
+    gap: 10px;
+    justify-content: center;  
 }
 
 .input{
@@ -21,7 +22,7 @@
     border-radius: 5px;
     border: 1px solid black;
     border-radius: 5px;
-
+    
 }
 
 .btn{
@@ -33,6 +34,6 @@
     padding: 10px;
     font-weight: 500;
     font-size: medium;
-    justify-content: center;
+  justify-content: center;
 
 }
