--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #ffffff;
+  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -28,15 +28,12 @@ body {
   /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
+  background-color: white;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-h2 {
-  color:black;
-  text-align: center;
 }
 
 button {
